class Semester:
    def __init__(self, nummer: int) -> None:
        self._nummer = nummer